# game-sdk

./: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  README  clean.sh  debug.sh  hello.cpp
example/: MyMainWindow.cpp  MyMainWindow.h  hello.cpp  resources.xml
example/images/menu/button/: pressed.xcf  released.xcf
graphics/: Sprite.cpp  Sprite.h  geometry.cpp
images/menu/button/: roll_over.xcf
libs/: DeviceScreen.cpp  DeviceScreen.h  Singleton.h
sdk/graphics/: Sprite.cpp  Sprite.h  geometry.cpp  geometry.h
sdk/misc/: Common.cpp  Common.h  DeviceScreen.cpp  DeviceScreen.h  ResourceManager.h  Singleton.h  String.h
sdk/ui/: Button.cpp  Button.h  MainWindow.cpp  MainWindow.h  SubWindow.cpp  SubWindow.h  Widget.cpp  Widget.h
ui/: Button.cpp  MainWindow.cpp  Widget.cpp  Widget.h
